Changelog for Miosix np embedded OS

- Fixed support for compiling kernel without WITH_FILESYSTEM and added
  WITH_DEVFS config option to fine-tune code size for a given application.
- File abstraction layer: Finished implementing DevFs with working
  StatelessDeviceFile, and DeviceFileGenerator for stateful files.
  Added MEssageFileGenerator to support /proc/cpuinfo-like stateful
  files.
- File abstraction layer: Moved console support out of DevFs, will allow
  better code size reduction if DevFs is not needed
- File abstraction layer: Addded support for stateless and stateful
  device files, added DeviceFileGenerator to support stateful devices.
- File abstraction layer: TerminalDevice is now instantiated in the FDT
- File abstraction layer: Merged NullFile and NullConsoleDevice classes.
- File abstraction layer: DeviceFile now implements a default version of
  lseek and fstat, to factorize common code from individual device files.
- File abstraction layer: added class DeviceFile from which all files meant
  to be attached to a DevFs should derive. Contains the code to assign an
  unique inode to each of them.
- File abstraction layer: added FilesystemManager::getFilesystemId() to
  have a different st_dev field when stat-ing files from different filesystems.
- File abstraction layer: added stringpart.cpp/.h and devfs/base_files.cpp/.h
  to better modularize code in files. file.h now contains only FileBase and
  FilesystemBase.
- Modified again the newlib patch, to make ino_t an unsigned long, as the
  default was an unsigned short. This change requires recompiling GCC!
- Removed old filesystem mount code in mainLoader(), replaced with
  a call to basicFilesystemSetup() in all BSPs.
- File abstraction layer: added basicFilesystemSetup() to file_access.h
- interfaces/console.h is no longer #included in miosix.h
- Removed the need to call IRQtxComplete() after IRQwrite() in the new
  ConsoleDevice interface, as it simplifies code. Starting getting rid of